# songpilot-mcp

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
src/: index.js
src/songpilot_mcp/: __init__.py  __main__.py  client.py  config.py  logging_config.py  main.py
tests/: conftest.py
tests/unit/: test_client.py  test_config.py  test_logging.py  test_main.py
