[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "songpilot-mcp"
version = "0.2.0"
description = "SongPilot MCP server for Claude Desktop integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SongPilot AI", email = "dev@songpilot.ai"}
]
keywords = ["mcp", "claude", "ai", "music", "songpilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ruff>=0.12.0",
    "isort>=5.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
songpilot-mcp = "songpilot_mcp.main:main"

[project.urls]
Homepage = "https://songpilot.ai"
Repository = "https://github.com/songpilotai/songpilot-mcp"
Documentation = "https://docs.songpilot.ai/mcp"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["songpilot_mcp"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument (FastMCP pattern)
    "B904",  # raise without from in except (too noisy for re-raised HTTPExceptions)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]  # Allow unused imports (re-exports)
"tests/**/*.py" = ["F401"]  # Allow unused imports in test files

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=songpilot_mcp",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=55",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests (>5 seconds)",
    "external: Tests requiring external services",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/songpilot_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/songpilot_mcp"]
